fix flickering bug with white outline appearing. when click keyboard after mouse

--- a/styles/button.css
+++ b/styles/button.css
@@ -6,4 +6,5 @@ button {
   font-size: var(--medium-font-size);
   user-select: none;
   cursor: pointer;
+  outline: none;
 }
